[package]
name = "pracstro"
version = "1.0.0"
authors = ["Oliver Webb <oliverwebb8192@gmail.com>"]
description = "A simplistic library for astronomy"
edition = "2021"
license = "0BSD"
readme = "README.md"
keywords = ["astronomy"]
repository = "https://github.com/oliverkwebb/pracstro"

[dependencies]
